book/tests/snapshots/snapshot__run_reference_prql@examples__cte-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/cte-0.prql
---
WITH average_salaries AS (
  SELECT
    country,
    AVG(salary) AS average_country_salary
  FROM
    salaries
  GROUP BY
    country
),
newest_employees AS (
  SELECT
    *
  FROM
    employees
  ORDER BY
    tenure
  LIMIT
    50
)
SELECT
  newest_employees.name,
  newest_employees.salary,
  average_salaries.average_country_salary
FROM
  newest_employees
  JOIN average_salaries ON newest_employees.country = average_salaries.country
