book/tests/snapshots/snapshot__run_reference_prql@examples__employees-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/employees-1.prql
---
WITH table_1 AS (
  SELECT
    e.gender,
    AVG(salary) AS emp_salary,
    e.emp_no
  FROM
    employees AS e
    JOIN salaries ON e.emp_no = salaries.emp_no
  GROUP BY
    e.emp_no,
    e.gender
),
table_2 AS (
  SELECT
    table_1.gender,
    AVG(table_1.emp_salary) AS salary_avg,
    STDDEV(table_1.emp_salary) AS salary_sd,
    de.dept_no
  FROM
    table_1
    LEFT JOIN dept_emp AS de ON table_1.emp_no = de.emp_no
  GROUP BY
    de.dept_no,
    table_1.gender
)
SELECT
  departments.dept_name,
  table_2.gender,
  table_2.salary_avg,
  table_2.salary_sd
FROM
  table_2
  JOIN departments ON table_2.dept_no = departments.dept_no
