book/tests/snapshots/snapshot__run_reference_prql@examples__employees-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/employees-2.prql
---
WITH table_1 AS (
  SELECT
    e.gender,
    AVG(salaries.salary) AS _expr_0,
    e.emp_no
  FROM
    employees AS e
    JOIN salaries ON e.emp_no = salaries.emp_no
  GROUP BY
    e.emp_no,
    e.gender
),
table_2 AS (
  SELECT
    AVG(table_1._expr_0) AS salary_avg,
    STDDEV(table_1._expr_0) AS salary_sd,
    dm.emp_no
  FROM
    table_1
    JOIN dept_emp AS de ON table_1.emp_no = de.emp_no
    JOIN dept_manager AS dm ON dm.dept_no = de.dept_no
    AND (de.from_date, de.to_date) OVERLAPS (dm.from_date, dm.to_date)
  GROUP BY
    dm.emp_no,
    table_1.gender
)
SELECT
  managers.first_name || ' ' || managers.last_name AS mng_name,
  managers.gender,
  table_2.salary_avg,
  table_2.salary_sd
FROM
  table_2
  JOIN employees AS managers ON table_2.emp_no = managers.emp_no
