book/tests/snapshots/snapshot__run_reference_prql@examples__variables-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/variables-1.prql
---
WITH table_1 AS (
  SELECT
    AVG(salary) AS emp_salary,
    emp_no
  FROM
    employees
  GROUP BY
    emp_no
)
SELECT
  AVG(table_1.emp_salary) / 1000 AS salary_k,
  AVG(table_1.emp_salary) / 1000 * 1000 AS salary
FROM
  table_1
  JOIN titles ON table_1.emp_no = titles.emp_no
GROUP BY
  titles.title
LIMIT
  10
